<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Myprofile">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="277dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="259dp"
        android:text="@string/my_phone_no"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="163dp"
        android:text="@string/my_email"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="355dp"
        android:layout_height="34dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="109dp"
        android:text="@string/my_slack_username"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="277dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="210dp"
        android:text="@string/my_country"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="204dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="103dp"
        android:layout_marginEnd="89dp"
        android:layout_marginBottom="452dp"
        android:contentDescription="@string/my_name"
        app:srcCompat="@drawable/kofi"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="67dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="95dp"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="402dp"
        android:text="@string/title_name"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="307dp"
        android:text="@string/my_name"
        android:textSize="20sp" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="386dp"
        android:background="#92030000" />


</RelativeLayout>