<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="146dp"
        android:layout_marginEnd="131dp"
        android:layout_marginBottom="400dp"
        android:background="#1777C3"
        android:text="@string/about_alc"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/button3"
        android:layout_width="131dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="147dp"
        android:layout_marginEnd="133dp"
        android:layout_marginBottom="35dp"
        android:background="#1777C3"
        android:text="@string/my_profile"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="400dp"
        android:layout_height="70dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="550dp"
        android:text="@string/welcome_msg"
        android:textSize="35sp" />
</RelativeLayout>